Got basic routes working

--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
             <input class="login-input" type="text" placeholder="Correo">
             <input class="login-input" type="password" placeholder="Password">
             <input class="login-checkbox" type="checkbox"><label>Recordarme</label>
-            <button class="login-submit" type="submit">Ingresar</button>
+            <button class="login-submit" type="submit" ng-click="login()">Ingresar</button>
         </div>
     </div>
 </section>
