Added a sidebar directive and it's styles and a small css reset (main.css)

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,13 +1,16 @@
-<header>
-    Industrial MSI - {{client.name}}
-</header>
-<nav class="sidebar">
-    <ul>
-        <li>Dashboard</li>
-        <li>Dispositivo 1</li>
-        <li>Dispositivo 2</li>
-        <li>Configuraci&oacute;n</li
-        <li>Salir</li>
-    </ul>
-</nav>
+<section class="sidebar">
+    <header class="sidebar-header">
+        Industrial MSI - {{client.name}}
+    </header>
+
+    <nav class="sidebar-content">
+        <ul class="sidebar-list">
+            <li><a href="#/app">Dashboard</a></li>
+            <li><a href="">Dispositivo 1</a></li>
+            <li><a href="">Dispositivo 2</a></li>
+            <li><a href="#/config">Configuraci&oacute;n</a></li>
+            <li><a href="#/logout">Salir</a></li>
+        </ul>
+    </nav>
+</section>
 
