--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,6 +1,6 @@
 <sidebar></sidebar>
 
-<section class="body" id="dashboard">
+<section class="content dashboard">
     <div>
         <h1>Dashboard</h1>
     </div>
