--- a/templates/device.html
+++ b/templates/device.html
@@ -1,5 +1,8 @@
-<section>
+<sidebar></sidebar>
+
+<section class="content device">
     <div>
+        <h1>{{device.name}}</h1>
         <div>
             <h2>Poluci&oacute;n</h2>
             <div>Graph</div>
