Added:     - plotly to package.json     - plotly to index.html     - fakeChart to Dashboard

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -18,7 +18,7 @@
                 </select>
             </div>
             <div class="graph-body">
-                Here goes a graph.
+                <div id="dashboardGraph"></div>
             </div>
         </div>
 
