--- a/templates/device.html
+++ b/templates/device.html
@@ -34,7 +34,7 @@
             </header>
 
             <div class="graph-body">
-                <div>Graph</div>
+                <div id="device"></div>
             </div>
         </div>
     </div>
