--- a/styles/main.css
+++ b/styles/main.css
@@ -8,9 +8,11 @@ body {
     padding: 20px;
 }
 
+.row {
+    padding: 14px;
+}
 .row:after {
     content: "";
     display: table;
     clear: both;
-    padding: 14px;
 }
