Added factory for user login and logout, added ngCookies for user auth, split controller files into permodule files, routes has their own file too and all modules must be initialized in app.js

--- a/styles/login.css
+++ b/styles/login.css
@@ -38,6 +38,12 @@
     width: 300px;
 }
 
+.login-error {
+  color: red;
+  text-align: center;
+  margin-bottom: 6px;
+}
+
 .login-checkbox {
     margin-left: 20px;
     margin-right: 8px;
