resolving the first version of assign device

--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -2,9 +2,9 @@
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
                         <li>
-                            <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                            <a href="#/dashboard"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                         </li>
-                        <li>
+                        <!--li>
                             <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Chancador 1<span class="fa arrow"></span></a>
                         </li>
                         <li>
@@ -18,6 +18,10 @@
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-wrench fa-fw"></i> Configuración<span class="fa arrow"></span></a>
+                        </li-->
+
+                        <li>
+                            <a href="#/devices/assign"><i class="fa fa-plus fa-fw"></i> Agregar Dispositivo</a>
                         </li>
 
                     </ul>
