--- a/src/app/components/navhead/navhead.html
+++ b/src/app/components/navhead/navhead.html
@@ -1,4 +1,8 @@
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#/logout"> &nbsp;Logout&nbsp;<i class="glyphicon glyphicon-log-out"></i></a></li> 
+            </ul>
             <div class="navbar-header">
+             	
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -6,4 +10,5 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="index.html">Industrial MS - NOMBRE CLIENTE</a>
+                
             </div>
