--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -20,8 +20,17 @@
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
+            
+            <div ng-if="vm.deviceCount === 0" class="row">
+                <div class="col-lg-12">
+                    <div class="col-lg-4 col-lg-offset-4">
+                        <p class="text-center text-primary">No existen dispositivos asociados a su cuenta</p>
+                        <a href="#/devices/assign" class="btn btn-primary  btn-lg btn-block "><i class="fa fa-plus fa-fw"></i> Agregar su primer dispositivo</a>
+                    </div>
+                </div>
+            </div>
 
-            <div class="row">
+            <div ng-if="vm.deviceCount > 0" class="row">
                 <div class="col-lg-8">
                     <div class="panel panel-default">
                         <div class="panel-heading">
