--- a/src/app/index.less
+++ b/src/app/index.less
@@ -27,6 +27,13 @@
   }
 }
 
+#last-time-chart{
+	width:100%;
+	height:400px;
+}
+
+.angular-google-map-container { height: 400px; }
+
 /**
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
  *  all your less files automatically
